\name{NEWS}
\title{News for Package 'specL'}
\newcommand{\ghpr}{\href{https://github.com/protViz/specL/pull/#1}{##1}}
\newcommand{\ghit}{\href{https://github.com/protViz/specL/issues/#1}{##1}}

\section{CHANGES IN VERSION 1.7.4 (2016-05-19)}{
  \itemize{
  \item USER VISIBLE CHANGES
    \itemize{
    \item added to \code{specLSet} summary "which std peptides (iRTs) where found in which raw files"
    \item one plot per raw file in plot methode of specLSet object
    }
  }
}

\section{CHANGES IN VERSION 1.7.1 (2016-05-13)}{
  \itemize{
  \item USER VISIBLE CHANGES
    \itemize{
    \item replaced NEWS by NEWS.Rd file
    \item modified specL object /replace decoy by score attribute \ghit{1},\ghit{4}
    \item specL on BioC 3.3
    }
  }
}


\section{CHANGES IN VERSION 1.5.10-13}{
  \itemize{
  \item USER UNVISIBLE CHANGES
    \itemize{
    \item added specLSet class support for cdsw methode
    \item changed Rmd5 vignette style
    \item added cdsw test case
    \item intro new vignette for cdsw method \url{http://bioconductor.org/packages/release/bioc/vignettes/specL/inst/doc/cdsw.html}
    }
  }
}

\section{CHANGES IN VERSION 1.5.9}{
    \itemize{
\item USER UNVISIBLE CHANGES
    \itemize{
  \item added test case for read.biliospec
    }}}
  
\section{CHANGES IN VERSION 1.5.5 - 1.5.8}{
\itemize{
\item USER VISIBLE CHANGES
\itemize{
  \item added RT prediction vignette file
  }}}

\section{CHANGES IN VERSION 1.5.4}{
\itemize{
\item USER UNVISIBLE CHANGES
\itemize{
  \item changed NAMESPACES and read.bibliospec docu to avoid warnings in 3.3 check
}}}

\section{CHANGES IN VERSION 1.5.3}{
\itemize{
\item USER UNVISIBLE CHANGES
  \itemize{
  
  \item added sqlite files for peptideStd RData \ghit{13}
  }}
}

\section{CHANGES IN VERSION 1.5.2}{
\itemize{
\item USER UNVISIBLE CHANGES
\itemize{
  \item find all signals having two or more in-silico fragment ions. \ghit{8}
  \item keep only the nearest fragment ion; if there are more take the first in line
}}}
