@@ -8,10 +8,12 @@ author:
     affiliation: Functional Genomics Center Zurich
 date: "`r doc_date()`"
 package: "`r pkg_ver('specL')`"
+bibliography:
+  - specL.bib
 abstract: >
   This files contains all the commands performing a default SWATH ion library
-  generation at the FGCZ. This document is usually triggered by the bfabric
-  system and is meant for training and reproducibility.
+  generation at the FGCZ. This document is usually triggered by the bfabric 
+  system [@bfabric] and is meant for training and reproducibility.
 vignette: >
   %\VignetteIndexEntry{Automatic Workflow}
   %\VignetteEngine{knitr::rmarkdown}
@@ -24,6 +26,14 @@ output:
 
 # Requirements
 
+In a first step, the peptide identification result is generated by a standard 
+shotgun proteomics experiment and has to be processed using the _bibliospec_
+software. [@pmid18428681].
+
+
+For generating the ion library the  `r Biocpkg('specL')` is used. The workflow is
+described in [@specLBioInf].
+
 The following R packages has to be installed on the compute box.
 
 ```{r}
@@ -33,6 +43,7 @@ library(specL)
 ```
 
 This file can be rendered by useing the following code snippet.
+
 ```{r eval=FALSE}
 library(rmarkdown)
 library(BiocStyle)
@@ -64,6 +75,7 @@ if(!exists("INPUT")){
     MASCOTSCORECUTOFF = 17,
     FRAGMENTIONMZRANGE = c(300, 1250),
     FRAGMENTIONRANGE = c(5, 200),
+    NORMRTPEPTIDES = specL::iRTpeptides,
     OUTPUT_LIBRARY_FILE = tempfile()
     )
 } 
@@ -72,7 +84,7 @@ if(!exists("INPUT")){
 The library generation workflow was performed using the following parameters:
 ```{r echo=FALSE}
   cat(
-  " FASTA_FILE = ", INPUT$FASTA_FILE, "\n",
+  " MASCOTSCORECUTOFF = ", INPUT$MASCOTSCORECUTOFF, "\n",
   " BLIB_FILTERED_FILE = ", INPUT$BLIB_FILTERED_FILE, "\n",
   " BLIB_REDUNDANT_FILE = ", INPUT$BLIB_REDUNDANT_FILE, "\n",
   " MZ_ERROR = ", INPUT$MZ_ERROR, "\n",
@@ -85,12 +97,17 @@ The library generation workflow was performed using the following parameters:
 
 ```
 
+```{r echo=FALSE, results='asis'}
+# library(knitr)
+# kable(t(as.data.frame(INPUT)))
+```
+
 ## Define the fragment ions of interest
 
 The following R helper function is used for composing the in-silico 
-fragment ion using `r CRANpkg("protViz")`.
+fragment ions using `r CRANpkg("protViz")`.
 ```{r}
-fragmentIonFunctionUpTo2 <- function (b, y) {
+fragmentIonFunction_specL <- function (b, y) {
   Hydrogen <- 1.007825
   Oxygen <- 15.994915
   Nitrogen <- 14.003074
@@ -133,6 +150,25 @@ FASTA <- read.fasta(INPUT$FASTA_FILE,
 BLIB_FILTERED <- annotate.protein_id(BLIB_FILTERED, fasta=FASTA)
 ```
 
+
+## Peptides used for RT normailization
+
+
+The following peptides are used for the RT normalization. The last column 
+indicates by FALSE/TRUE if a peptides is included in the data. The rows were 
+ordered by the RT values.
+
+```{r echo=FALSE, results='asis'}
+library(knitr)
+
+INPUT$NORMRTPEPTIDES$included <- INPUT$NORMRTPEPTIDES$peptide %in% sapply(BLIB_REDUNDANT, function(x){x$peptideSequence})
+res <- INPUT$NORMRTPEPTIDES[order(INPUT$NORMRTPEPTIDES$rt),]
+# row.names(res) <- 1:nrow(res)
+kable(res, caption='peptides used for RT normaization.')
+```
+
+
+
 # Generate the ion library
 
 
@@ -144,8 +180,9 @@ specLibrary <- specL::genSwathIonLib(
   topN = INPUT$MAX_IONS,
   fragmentIonMzRange = INPUT$FRAGMENTIONMZRANGE,
   fragmentIonRange = INPUT$FRAGMENTIONRANGE,
-  fragmentIonFUN = fragmentIonFunctionUpTo2,
-  mascotIonScoreCutOFF = INPUT$MASCOTSCORECUTOFF
+  fragmentIonFUN = fragmentIonFunction_specL,
+  mascotIonScoreCutOFF = INPUT$MASCOTSCORECUTOFF,
+  iRT = INPUT$NORMRTPEPTIDES
   )
 ```
 
@@ -184,24 +221,10 @@ write.spectronaut(specLibrary, file =  INPUT$OUTPUT_LIBRARY_FILE)
 
 # Remarks
 
-This report was generated using the packages:
-
-- [http://bioconductor.org/packages/specL](http://bioconductor.org/packages/specL/) version `r packageVersion('specL')`
-
-
-We have invested a lot of time and effort in creating and maintaining this software.
-Please cite our publication:
-
-- Panse C, Trachsel C, Grossmann J and Schlapbach R (2015). 
-``specL - An R/Bioconductor package to prepare peptide spectrum matches for use in targeted proteomics.'' 
-Bioinformatics, pp. 2228-2231. 
-[DOI:10.1093/bioinformatics/btv105](http://dx.doi.org/10.1093/bioinformatics/btv105), 
-[PMID: 25712692](https://www.ncbi.nlm.nih.gov/pubmed/25712692).
-
-
 For questions and improvements please do contact the authors of the application [_generateSpecLibrary_](https://github.com/fgcz/generateSpecLibrary/graphs/contributors).
 
-
+This report Rmarkdown file has been written by Witold E. Wolski and
+is maintained by CP.
 
 # Session info
 
@@ -211,3 +234,5 @@ document was compiled:
 ```{r sessionInfo, echo=FALSE}
 sessionInfo()
 ```
+
+# References
